welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def trace()
{
  baisseBrosse()
  leveBrosse()
}

def faireQuart()
{
  avancer()
  gauche()
  trace()
  avance()
  gauche()
  avance()
  trace()
  gauche()
  avance()
  droite()
}

def faireO()
{
  faireQuart()
}

override def run()
{
  faireO()
}